--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,6 @@
   <body>
     <div id="app"></div>
     <script src="/bundle.js"></script>
+    <!-- in DEV mode, webpack is embedding CSS into the bundle.js file -->
   </body>
 </html>
